fix z-index of icon for internet explorer

--- a/behzad/src/styles/_header.scss
+++ b/behzad/src/styles/_header.scss
@@ -33,6 +33,7 @@
     margin-left: 0;
     max-width: 200px;
     transition: max-width .5s, margin-left .5s;
+    z-index: 1;
   }
 
   img {
@@ -193,6 +194,7 @@
     .sticky_little {
       max-width: 45px;
     }
+
     .sticky_fixed {
       position: fixed;
       padding-top: 3px;
